--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,5 +5,10 @@
 // Variables
 @import "variables";
 
+@import "animate";
+
+@import "inspinia";
+
+
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
