--- a/resources/assets/sass/inspinia.scss
+++ b/resources/assets/sass/inspinia.scss
@@ -5310,12 +5310,12 @@ body.mini-navbar.fixed-sidebar {
   color: #e6e6e6;
   font-size: 180px;
   font-weight: 800;
-  letter-spacing: -10px;
+  //letter-spacing: -10px;
   margin-bottom: 0px;
 }
 
 .middle-box h1 {
-  font-size: 170px;
+  font-size: 60px;
 }
 
 .wrapper .middle-box {
