--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15115,4 +15115,17 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+.login-bg {
+  position: absolute;
+  min-height: 100%;
+  min-width: 100%;
+  /* text-align: center; */
+  /* margin-left: -25%; */
+  /* margin: auto; */
+  /* left: 50%; */
+  /* top: 50%; */
+  left: 0;
+  right: 0;
+  bottom: 0; }
+
 /*# sourceMappingURL=app.css.map */
