--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -2,13 +2,7 @@
   position: absolute;
   min-height: 100%;
   min-width: 100%;
-  /* text-align: center; */
-  /* margin-left: -25%; */
-  /* margin: auto; */
-  /* left: 50%; */
-  /* top: 50%; */
-  //display: block;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
